Bug 5. Adicionei text-align center ao td

--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -94,9 +94,7 @@ div img {
 li{
     display: block;
 }
-p{
-    display: block;
-}
+
 /**
   *
   *  ESTILOS COMPRAR 
@@ -139,4 +137,7 @@ td button {
 
 #back-button:hover {
     background-color: #635a3d
+}
+td{
+    text-align: center;
 }
